report API updated